ingress-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-staging","kubernetes.io/ingress.class":"nginx","kubernetes.io/tls-acme":"true"},"labels":{"name":"dev-ingress"},"name":"dev-ingress","namespace":"default"},"spec":{"rules":[{"host":"rollmein.scottkey.dev","http":{"paths":[{"backend":{"service":{"name":"rollmein-api","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"basic.scottkey.dev","http":{"path [...]
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  creationTimestamp: "2021-06-24T06:20:24Z"
  generation: 2
  labels:
    name: dev-ingress
  name: dev-ingress
  namespace: default
  resourceVersion: "234163"
  uid: e78eface-d706-402d-b11a-838ac8262bb5
spec:
  rules:
  - host: rollmein.scottkey.dev
    http:
      paths:
      - backend:
          service:
            name: rollmein-api
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: www.scottkey.dev
    http:
      paths:
      - backend:
          service:
            name: basic-api-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: echo1.scottkey.dev
    http:
      paths:
      - backend:
          service:
            name: ghost
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - echo1.scottkey.dev
    - basic.scottkey.dev
    - rollmein.scottkey.dev
    secretName: dev-tls-cert
status:
  loadBalancer:
    ingress:
    - ip: 198.58.124.104
