ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "basic.scottkey.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: basic
            port: 
              number: 80
